--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -5,6 +5,55 @@
  */
 
 /*! normalize.css v3.0.1 | MIT License | git.io/normalize */
+.answer{
+  font-size: 16px;
+  border-radius: 5px;
+  border: 2px solid #6495ED;
+  background-color: #BCD2EE;
+  padding: 10px;
+  height: 70px;
+  width: 260px;
+  margin: 10px;
+  text-align: center;
+  text-indent: center;
+  float: left;
+  display: inline-block;
+  vertical-align: middle;
+  line-height: normal; 
+}
+
+.animal{
+  height: 40px;
+  float: left;
+}
+
+.answerA_container{
+  clear: both;
+}
+.answerT_container{
+  clear: both;
+}
+
+.question_container{
+  font-size: 24px;
+}
+.question{
+  clear: both;
+}
+
+.qtext{
+  float: left;
+}
+
+.qspace{
+  float:left;
+}
+
+.qanimal{
+  float:left;
+}
+
+
 html {
   font-family: sans-serif;
   -webkit-text-size-adjust: 100%;
