--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -11,10 +11,10 @@
 
 .block{
   margin: auto;
-  width: 90%;
+  width: 95%;
 }
 .left-block{
-  width: 35%;
+  width: 40%;
   float: right;
 }
 
@@ -24,13 +24,13 @@
 }
 
 .answer{
-  font-size: 16px;
+  font-size: 1.2em;
   border-radius: 5px;
   border: 2px solid #6495ED;
   background-color: #BCD2EE;
   padding: 10px;
   height: 20px;
-  width: 500px;
+  width: 550px;
   margin: 10px;
   line-height: 1px;
   text-align: center;
@@ -45,7 +45,7 @@
 }
 .animal{
   float: left;
-  width: 240px;
+  width: 260px;
 }
 
 .answerA_container{
@@ -56,7 +56,7 @@
 }
 
 .question_container{
-  font-size: 24px;
+  font-size: 1.5em;
 }
 .question{
   padding-top: 28px;
